# noaa_collection_scraper

./: .gitignore  config.py  metadata_scraper.py  osim_meta.py  pipeline_runner.py  pyproject.toml  requirements.txt  url_scraper.py
db/: creation.py
noaa_collection_scraper/: README.md  cleanup_artifacts.py  config.py  db_utils.py  metadata_scraper.py  osim_meta.py
noaa_collection_scraper/db/: dump.py  readme.md  test_setup.py
tests/: test_pipeline_runner.py
